<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/custom_picture"
    tools:context=".PlayerName">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dice_game"
        android:fontFamily="sans-serif-condensed"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/enterName"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_game_username"
        android:textColor="#ffffff"
        android:textColorHint="#80FFFFFF"
        android:background="@color/dark_blue"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startGameBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_blue_button"
        android:text="@string/start_game"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"/>




</LinearLayout>