<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_picture"
    tools:context=".UserInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/gameContainer"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/player1layout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_blue_dark"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player1TV"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/player_one"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold"

                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/player2layout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/round_blue_dark_2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player2TV"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/player_two"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/gameContainer"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round_purple">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dice_button"
            android:layout_width="350dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_blue_dark_2"
            android:padding="20dp"
            android:text="@string/roll_dice"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_white">

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:hint="@string/dice_score"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:padding="7dp"
            android:paddingStart="50dp"/>

    </LinearLayout>
</RelativeLayout>